# commitpaper

./: .gitignore  README.md  WEBSITE.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
public/: manifest.json
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: files.rs  git.rs  mod.rs  search.rs  vault.rs
src-tauri/src/models/: git_status.rs  link.rs  mod.rs  note.rs  vault.rs
src-tauri/src/services/: git_service.rs  indexer.rs  linker.rs  mod.rs  parser.rs  watcher.rs
src/components/: CommandPalette.tsx  ContextMenu.tsx  KeyboardShortcuts.tsx  SettingsMenu.tsx  StatusBar.tsx  ThemeSelector.tsx  WelcomeScreen.tsx
src/components/Editor/: Editor.tsx  EditorArea.tsx  FormattingToolbar.tsx  MarkdownPreview.tsx  NotePicker.tsx  RawEditor.tsx
src/components/Editor/extensions/: autoBrackets.ts  bubbleMenu.ts  calloutPlugin.ts  callouts.ts  checkboxes.ts  embedPlugin.ts  formatting.ts  (+12 more)
src/components/RightPanel/: BacklinksPanel.tsx  GraphView.tsx  HistoryPanel.tsx  OutlinePanel.tsx  PropertiesPanel.tsx  RightPanel.tsx
src/components/Sidebar/: DailyNotes.tsx  FileTree.tsx  GitPanel.tsx  SearchPanel.tsx  Sidebar.tsx  TagsPanel.tsx  TemplatesPanel.tsx
src/lib/: analytics.ts  api.ts  fs-adapter.ts  git.ts  search.ts  settings.ts  tauri.ts
src/pages/: LandingPage.tsx
src/stores/: editorStore.ts  gitStore.ts  themeStore.ts  vaultStore.ts
src/styles/: global.css  themes.css
src/types/: file-system-access.d.ts
