[package]
name = "gitsidian"
version = "0.1.0"
description = "Git-native personal knowledge management"
authors = ["you"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "gitsidian_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"

# Git operations
git2 = "0.20"

# File watching
notify = "8"
notify-debouncer-mini = "0.6"

# Markdown parsing (with wikilinks, frontmatter support)
comrak = { version = "0.38", default-features = false }

# Full-text search
tantivy = "0.22"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Unique IDs
uuid = { version = "1", features = ["v4"] }

# Path handling
walkdir = "2"
globset = "0.4"
